--- a/Lib/Neon.Kube/Resources/Helm/harbor/templates/core/core-dpl.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/harbor/templates/core/core-dpl.yaml
@@ -40,21 +40,31 @@ spec:
       {{- end }}
       containers:
       - name: core
-        image: "{{ .Values.core.image.organization }}/{{ .Values.core.image.repository }}:{{ .Values.core.image.tag }}"
+        image: {{ .Values.core.image.repository }}:{{ .Values.core.image.tag }}
         imagePullPolicy: {{ .Values.imagePullPolicy }}
+        {{- if .Values.core.startupProbe.enabled }}
+        startupProbe:
+          httpGet:
+            path: /api/v2.0/ping
+            scheme: {{ include "harbor.component.scheme" . | upper }}
+            port: {{ template "harbor.core.containerPort" . }}
+          failureThreshold: 360
+          initialDelaySeconds: {{ .Values.core.startupProbe.initialDelaySeconds }}
+          periodSeconds: 10
+        {{- end }}
         livenessProbe:
           httpGet:
             path: /api/v2.0/ping
             scheme: {{ include "harbor.component.scheme" . | upper }}
             port: {{ template "harbor.core.containerPort" . }}
-          initialDelaySeconds: {{ .Values.core.livenessProbe.initialDelaySeconds }}
+          failureThreshold: 2
           periodSeconds: 10
         readinessProbe:
           httpGet:
             path: /api/v2.0/ping
             scheme: {{ include "harbor.component.scheme" . | upper }}
             port: {{ template "harbor.core.containerPort" . }}
-          initialDelaySeconds: 20
+          failureThreshold: 2
           periodSeconds: 10
         envFrom:
         - configMapRef:
