--- a/Lib/Neon.Kube/Resources/Helm/calico/templates/deployment.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/calico/templates/deployment.yaml
@@ -1,5 +1,5 @@
 # Source: calico/templates/calico-kube-controllers.yaml
-# See https://github.com/projectcalico/kube-controllers
+# See https://github.com/projectneon-registry.node.local/calico-kube-controllers
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -34,7 +34,7 @@ spec:
       priorityClassName: system-cluster-critical
       containers:
         - name: calico-kube-controllers
-          image: calico/kube-controllers:v3.16.6
+          image: neon-registry.node.local/calico-kube-controllers:v3.16.7
           env:
             # Choose which controllers to run.
             - name: ENABLED_CONTROLLERS
