--- a/Lib/Neon.Kube/Resources/Helm/cortex/values.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/cortex/values.yaml
@@ -59,7 +59,7 @@ cortexConfig:
       sync_dir: /tmp/cortex/tsdb-sync
     s3:
       bucket_name: cortex
-      endpoint: neon-metrics-minio:9000
+      endpoint: neon-system-minio.neon-system:9000
       access_key_id: ${ACCESS_KEY_ID}
       secret_access_key: ${SECRET_ACCESS_KEY}
       insecure: true
@@ -80,7 +80,7 @@ cortexConfig:
           store: inmemory
           etcd:
             endpoints:
-              - neon-metrics-etcd:2379
+              - neon-etcd.neon-system:2379
         replication_factor: 1
 
   storage:
@@ -148,12 +148,12 @@ env:
   - name: ACCESS_KEY_ID
     valueFrom:
       secretKeyRef:
-        name: neon-metrics-minio
+        name: neon-system-minio
         key: accesskey
   - name: SECRET_ACCESS_KEY
     valueFrom:
       secretKeyRef:
-        name: neon-metrics-minio
+        name: neon-system-minio
         key: secretkey
 
 securityContext: {}
