--- a/Lib/Neon.Kube/Resources/Helm/harbor/templates/ingress/ingress.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/harbor/templates/ingress/ingress.yaml
@@ -1,133 +1,95 @@
-{{- if eq .Values.expose.type "ingress" }}
-{{- $ingress := .Values.expose.ingress -}}
-{{- $tls := .Values.expose.tls -}}
-{{- if eq .Values.expose.ingress.controller "gce" }}
-  {{- $_ := set . "portal_path" "/*" -}}
-  {{- $_ := set . "api_path" "/api/*" -}}
-  {{- $_ := set . "service_path" "/service/*" -}}
-  {{- $_ := set . "v2_path" "/v2/*" -}}
-  {{- $_ := set . "chartrepo_path" "/chartrepo/*" -}}
-  {{- $_ := set . "controller_path" "/c/*" -}}
-  {{- $_ := set . "notary_path" "/" -}}
-{{- else if eq .Values.expose.ingress.controller "ncp" }}
-  {{- $_ := set . "portal_path" "/.*" -}}
-  {{- $_ := set . "api_path" "/api/.*" -}}
-  {{- $_ := set . "service_path" "/service/.*" -}}
-  {{- $_ := set . "v2_path" "/v2/.*" -}}
-  {{- $_ := set . "chartrepo_path" "/chartrepo/.*" -}}
-  {{- $_ := set . "controller_path" "/c/.*" -}}
-  {{- $_ := set . "notary_path" "/.*" -}}
-{{- else }}
-  {{- $_ := set . "portal_path" "/" -}}
-  {{- $_ := set . "api_path" "/api/" -}}
-  {{- $_ := set . "service_path" "/service/" -}}
-  {{- $_ := set . "v2_path" "/v2/" -}}
-  {{- $_ := set . "chartrepo_path" "/chartrepo/" -}}
-  {{- $_ := set . "controller_path" "/c/" -}}
-  {{- $_ := set . "notary_path" "/" -}}
-{{- end }}
-
----
-{{- if semverCompare "<1.14-0" .Capabilities.KubeVersion.GitVersion }}
-apiVersion: extensions/v1beta1
-{{- else }}
-apiVersion: networking.k8s.io/v1beta1
-{{- end }}
-kind: Ingress
+apiVersion: networking.istio.io/v1alpha3
+kind: Gateway
 metadata:
-  name: "{{ template "harbor.ingress" . }}"
-  labels:
-{{ include "harbor.labels" . | indent 4 }}
-  annotations:
-{{ toYaml $ingress.annotations | indent 4 }}
-{{- if .Values.internalTLS.enabled }}
-    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
-{{- end }}
-{{- if eq .Values.expose.ingress.controller "ncp" }}
-    ncp/use-regex: "true"
-    {{- if $tls.enabled }}
-    ncp/http-redirect: "true"
-    {{- end }}
-{{- end }}
+  name: harbor-gateway
+  namespace: istio-system
 spec:
-  {{- if $tls.enabled }}
-  tls:
-  - secretName: {{ template "harbor.tlsCoreSecretForIngress" . }}
-    {{- if $ingress.hosts.core }}
-    hosts:
-    - {{ $ingress.hosts.core }}
-    {{- end }}
-  {{- end }}
-  rules:
-  - http:
-      paths:
-      - path: {{ .portal_path }}
-        backend:
-          serviceName: {{ template "harbor.portal" . }}
-          servicePort: {{ template "harbor.portal.servicePort" . }}
-      - path: {{ .api_path }}
-        backend:
-          serviceName: {{ template "harbor.core" . }}
-          servicePort: {{ template "harbor.core.servicePort" . }}
-      - path: {{ .service_path }}
-        backend:
-          serviceName: {{ template "harbor.core" . }}
-          servicePort: {{ template "harbor.core.servicePort" . }}
-      - path: {{ .v2_path }}
-        backend:
-          serviceName: {{ template "harbor.core" . }}
-          servicePort: {{ template "harbor.core.servicePort" . }}
-      - path: {{ .chartrepo_path }}
-        backend:
-          serviceName: {{ template "harbor.core" . }}
-          servicePort: {{ template "harbor.core.servicePort" . }}
-      - path: {{ .controller_path }}
-        backend:
-          serviceName: {{ template "harbor.core" . }}
-          servicePort: {{ template "harbor.core.servicePort" . }}
-    {{- if $ingress.hosts.core }}
-    host: {{ $ingress.hosts.core }}
-    {{- end }}
-
-{{- if .Values.notary.enabled  }}
+  selector:
+    istio: ingressgateway
+  servers:
+    - hosts:
+        - {{ .Values.expose.ingress.hosts.core }}
+      port:
+        name: http-harbor
+        number: 8080
+        protocol: HTTP
+    - hosts:
+        - {{ .Values.expose.ingress.hosts.core }}
+        - {{ .Values.expose.ingress.hosts.notary }}
+      port:
+        name: https-harbor
+        number: 8443
+        protocol: HTTPS
+      tls:
+        credentialName: "{{ template "harbor.ingress" . }}"
+        mode: SIMPLE
 ---
-{{- if semverCompare "<1.14-0" .Capabilities.KubeVersion.GitVersion }}
-apiVersion: extensions/v1beta1
-{{- else }}
-apiVersion: networking.k8s.io/v1beta1
-{{- end }}
-kind: Ingress
+apiVersion: networking.istio.io/v1alpha3
+kind: VirtualService
 metadata:
-  name: "{{ template "harbor.ingress-notary" . }}"
-  labels:
-{{ include "harbor.labels" . | indent 4 }}
-  annotations:
-{{ toYaml $ingress.annotations | indent 4 }}
-{{- if eq .Values.expose.ingress.controller "ncp" }}
-    ncp/use-regex: "true"
-    {{- if $tls.enabled }}
-    ncp/http-redirect: "true"
-    {{- end }}
-{{- end }}
+  name: harbor-virtual-service
+  namespace: istio-system
 spec:
-  {{- if $tls.enabled }}
-  tls:
-  - secretName: {{ template "harbor.tlsNotarySecretForIngress" . }}
-    {{- if $ingress.hosts.notary }}
-    hosts:
-    - {{ $ingress.hosts.notary }}
-    {{- end }}
-  {{- end }}
-  rules:
-  - http:
-      paths:
-      - path: {{ .notary_path }}
-        backend:
-          serviceName: {{ template "harbor.notary-server" . }}
-          servicePort: 4443
-    {{- if $ingress.hosts.notary }}
-    host: {{ $ingress.hosts.notary }}
-    {{- end }}
-{{- end }}
+  gateways:
+    - harbor-gateway
+  hosts:
+    - {{ .Values.expose.ingress.hosts.core }}
+    - {{ .Values.expose.ingress.hosts.notary }}
+  http:
+    - match:
+        - uri:
+            prefix: /c/
+      route:
+        - destination:
+            host: "{{ template "harbor.coreService" . }}"
+            port:
+              number: {{ template "harbor.core.servicePort" . }}
+    - match:
+        - uri:
+            prefix: /api/
+      route:
+        - destination:
+            host: "{{ template "harbor.coreService" . }}"
+            port:
+              number: {{ template "harbor.core.servicePort" . }}
+    - match:
+        - uri:
+            prefix: /v2/
+      route:
+        - destination:
+            host: "{{ template "harbor.registryService" . }}"
+            port:
+              number: {{ template "harbor.registry.servicePort" . }}
+    - fault:
+        abort:
+          httpStatus: 404
+      match:
+        - uri:
+            prefix: /v1/
+      route:
+        - destination:
+            host: "{{ template "harbor.registryService" . }}"
+            port:
+              number: {{ template "harbor.registry.servicePort" . }}
+    - match:
+        - uri:
+            prefix: /service/
+      route:
+        - destination:
+            host: "{{ template "harbor.coreService" . }}"
+            port:
+              number: {{ template "harbor.core.servicePort" . }}
+    - match:
+        - uri:
+            prefix: /chartrepo/
+      route:
+        - destination:
+            host: "{{ template "harbor.coreService" . }}"
+            port:
+              number: {{ template "harbor.core.servicePort" . }}
+    - route:
+        - destination:
+            host: "{{ template "harbor.portalService" . }}"
+            port:
+              number: {{ template "harbor.portal.servicePort" . }}
 
-{{- end }}
