--- a/Lib/Neon.Kube/Resources/Helm/harbor/templates/registry/registry-cm.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/harbor/templates/registry/registry-cm.yaml
@@ -59,6 +59,9 @@ data:
         {{- if $storage.s3.secure }}
         secure: {{ $storage.s3.secure }}
         {{- end }}
+        {{- if and $storage.s3.secure $storage.s3.skipverify }}
+        skipverify: {{ $storage.s3.skipverify }}
+        {{- end }}
         {{- if $storage.s3.v4auth }}
         v4auth: {{ $storage.s3.v4auth }}
         {{- end }}
@@ -181,9 +184,11 @@ data:
       debug:
         addr: localhost:5001
     auth:
-      htpasswd:
-        realm: harbor-registry-basic-realm
-        path: /etc/registry/passwd
+      token:
+        issuer: harbor-token-issuer
+        realm: "{{ .Values.externalURL }}/service/token"
+        rootcertbundle: /etc/registry/root.crt
+        service: harbor-registry
     validation:
       disabled: true
     compatibility:
