--- a/Lib/Neon.Kube/Resources/Helm/harbor/templates/notary/notary-server.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/harbor/templates/notary/notary-server.yaml
@@ -35,7 +35,7 @@ spec:
       {{- end }}
       containers:
       - name: notary-server
-        image: {{ .Values.notary.server.image.repository }}:{{ .Values.notary.server.image.tag }}
+        image: {{ .Values.notary.server.image.organization }}/{{ .Values.notary.server.image.repository }}:{{ .Values.notary.server.image.tag }}
         imagePullPolicy: {{ .Values.imagePullPolicy }}
 {{- if .Values.notary.server.resources }}
         resources:
