--- a/Lib/Neon.Kube/Resources/Helm/loki/values.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/loki/values.yaml
@@ -97,6 +97,7 @@ config:
       secret_access_key: ${SECRET_ACCESS_KEY}
       insecure: true
       s3forcepathstyle: true
+      region: neon
   compactor:
     working_directory: /data/loki/boltdb-shipper-compactor
     shared_store: filesystem
