--- a/Lib/Neon.Kube/Resources/Helm/promtail/values.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/promtail/values.yaml
@@ -4,21 +4,6 @@ nameOverride: null
 # -- Overrides the chart's computed fullname
 fullnameOverride: null
 
-initContainer:
-  # -- Specifies whether the init container for setting inotify max user instances is to be enabled
-  enabled: true
-  image:
-    # -- The Docker registry for the init container
-    registry: neon-registry.node.local
-    # -- Docker image repository for the init container
-    repository: busybox
-    # -- Docker tag for the init container
-    tag: 1.32.0
-    # -- Docker image pull policy for the init container image
-    pullPolicy: IfNotPresent
-  # -- The inotify max user instances to configure
-  fsInotifyMaxUserInstances: 128
-
 image:
   # -- The Docker registry
   registry: neon-registry.node.local
@@ -140,10 +125,16 @@ defaultVolumeMounts:
     readOnly: true
 
 # Extra volumes to be added in addition to those specified under `defaultVolumes`.
-extraVolumes: []
+extraVolumes:
+  - name: journal
+    hostPath:
+      path: /var/log/journal
 
 # Extra volume mounts together. Corresponds to `extraVolumes`.
-extraVolumeMounts: []
+extraVolumeMounts:
+  - name: journal
+    mountPath: /var/log/journal
+    readOnly: true
 
 # Extra args for the Promtail container.
 extraArgs: []
@@ -269,6 +260,22 @@ config:
         target_label: __path__
     scrapeConfigs: |
       # See also https://github.com/grafana/loki/blob/master/production/ksonnet/promtail/scrape_config.libsonnet for reference
+
+      # Pods with a label 'app.kubernetes.io/name'
+      - job_name: journal
+        journal:
+          path: /var/log/journal
+          max_age: 12h
+          labels:
+            job: systemd-journal
+        relabel_configs:
+          - source_labels:
+              - '__journal__systemd_unit'
+            target_label: 'unit'
+          - source_labels:
+              - '__journal__hostname'
+            target_label: 'hostname'
+          {{- toYaml .Values.config.snippets.common | nindent 4 }}
 
       # Pods with a label 'app.kubernetes.io/name'
       - job_name: kubernetes-pods-app-kubernetes-io-name
