--- a/Tools/neon-model/neon-model.csproj
+++ b/Tools/neon-model/neon-model.csproj
@@ -4,6 +4,12 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>ModelCli</RootNamespace>
+    <Authors>neonFORGE Team</Authors>
+    <Company>neonFORGE LLC</Company>
+    <Description>Generate models from class definitions.</Description>
+    <Copyright>Copyright © 2005-2021 by neonFORGE LLC.  All rights reserved.</Copyright>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <PackageProjectUrl>https://github.com/nforgeio/neonCLOUD</PackageProjectUrl>
   </PropertyGroup>
 
   <ItemGroup>
@@ -16,6 +22,13 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Lib\Neon.Common\Neon.Common.csproj" />
     <ProjectReference Include="..\..\Lib\Neon.ModelGen\Neon.ModelGen.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\..\..\neonCLOUD\LICENSE">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
