--- a/Lib/Neon.ModelGenerator/Neon.ModelGenerator.csproj
+++ b/Lib/Neon.ModelGenerator/Neon.ModelGenerator.csproj
@@ -1,7 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <OutputType>Exe</OutputType>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <Version>2.10.0-preview</Version>
     <Authors>neonFORGE Team</Authors>
@@ -11,6 +12,8 @@
 
 NOTE: You must have a .NET Core 3.1 SDK or runtime installed for this to work because the client is built on this SDK.</Description>
     <Copyright>Copyright © 2005-2021 by neonFORGE LLC.  All rights reserved.</Copyright>
+    <PackAsTool>true</PackAsTool>
+    <ToolCommandName>neon-modelgen</ToolCommandName>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <PackageIcon>nuget-icon.png</PackageIcon>
     <PackageProjectUrl>https://github.com/nforgeio/neonKUBE/blob/master/Lib/Neon.ModelGenerator/README.md</PackageProjectUrl>
@@ -36,192 +39,6 @@ NOTE: You must have a .NET Core 3.1 SDK or runtime installed for this to work be
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Humanizer.dll" />
-    <None Remove="ICSharpCode.SharpZipLib.dll" />
-    <None Remove="Microsoft.Bcl.AsyncInterfaces.dll" />
-    <None Remove="Microsoft.CodeAnalysis.CSharp.dll" />
-    <None Remove="Microsoft.CodeAnalysis.CSharp.Workspaces.dll" />
-    <None Remove="Microsoft.CodeAnalysis.dll" />
-    <None Remove="Microsoft.CodeAnalysis.VisualBasic.dll" />
-    <None Remove="Microsoft.CodeAnalysis.VisualBasic.Workspaces.dll" />
-    <None Remove="Microsoft.CodeAnalysis.Workspaces.dll" />
-    <None Remove="Microsoft.Extensions.DependencyInjection.Abstractions.dll" />
-    <None Remove="Microsoft.Extensions.DependencyInjection.dll" />
-    <None Remove="Microsoft.Extensions.Logging.Abstractions.dll" />
-    <None Remove="neon-model.deps.json" />
-    <None Remove="neon-model.dll" />
-    <None Remove="neon-model.exe" />
-    <None Remove="neon-model.pdb" />
-    <None Remove="neon-model.runtimeconfig.dev.json" />
-    <None Remove="neon-model.runtimeconfig.json" />
-    <None Remove="Neon.Common.dll" />
-    <None Remove="Neon.Common.pdb" />
-    <None Remove="Neon.Common.xml" />
-    <None Remove="Neon.ModelGen.dll" />
-    <None Remove="Neon.ModelGen.pdb" />
-    <None Remove="Neon.ModelGen.xml" />
-    <None Remove="Newtonsoft.Json.dll" />
-    <None Remove="Prometheus.NetCore.dll" />
-    <None Remove="Prometheus.NetStandard.dll" />
-    <None Remove="System.Collections.Immutable.dll" />
-    <None Remove="System.Composition.AttributedModel.dll" />
-    <None Remove="System.Composition.Convention.dll" />
-    <None Remove="System.Composition.Hosting.dll" />
-    <None Remove="System.Composition.Runtime.dll" />
-    <None Remove="System.Composition.TypedParts.dll" />
-    <None Remove="System.Reflection.Metadata.dll" />
-    <None Remove="System.Runtime.CompilerServices.Unsafe.dll" />
-    <None Remove="YamlDotNet.dll" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Content Include="neon-model\Humanizer.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <PackageCopyToOutput>true</PackageCopyToOutput>
-    </Content>
-    <Content Include="neon-model\ICSharpCode.SharpZipLib.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <PackageCopyToOutput>true</PackageCopyToOutput>
-    </Content>
-    <Content Include="neon-model\Microsoft.Bcl.AsyncInterfaces.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <PackageCopyToOutput>true</PackageCopyToOutput>
-    </Content>
-    <Content Include="neon-model\Microsoft.CodeAnalysis.CSharp.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <PackageCopyToOutput>true</PackageCopyToOutput>
-    </Content>
-    <Content Include="neon-model\Microsoft.CodeAnalysis.CSharp.Workspaces.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <PackageCopyToOutput>true</PackageCopyToOutput>
-    </Content>
-    <Content Include="neon-model\Microsoft.CodeAnalysis.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <PackageCopyToOutput>true</PackageCopyToOutput>
-    </Content>
-    <Content Include="neon-model\Microsoft.CodeAnalysis.VisualBasic.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <PackageCopyToOutput>true</PackageCopyToOutput>
-    </Content>
-    <Content Include="neon-model\Microsoft.CodeAnalysis.VisualBasic.Workspaces.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <PackageCopyToOutput>true</PackageCopyToOutput>
-    </Content>
-    <Content Include="neon-model\Microsoft.CodeAnalysis.Workspaces.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <PackageCopyToOutput>true</PackageCopyToOutput>
-    </Content>
-    <Content Include="neon-model\Microsoft.Extensions.DependencyInjection.Abstractions.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <PackageCopyToOutput>true</PackageCopyToOutput>
-    </Content>
-    <Content Include="neon-model\Microsoft.Extensions.DependencyInjection.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <PackageCopyToOutput>true</PackageCopyToOutput>
-    </Content>
-    <Content Include="neon-model\Microsoft.Extensions.Logging.Abstractions.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <PackageCopyToOutput>true</PackageCopyToOutput>
-    </Content>
-    <Content Include="neon-model\neon-model.deps.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <PackageCopyToOutput>true</PackageCopyToOutput>
-    </Content>
-    <Content Include="neon-model\neon-model.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <PackageCopyToOutput>true</PackageCopyToOutput>
-    </Content>
-    <Content Include="neon-model\neon-model.exe">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <PackageCopyToOutput>true</PackageCopyToOutput>
-    </Content>
-    <Content Include="neon-model\neon-model.pdb">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <PackageCopyToOutput>true</PackageCopyToOutput>
-    </Content>
-    <Content Include="neon-model\neon-model.runtimeconfig.dev.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <PackageCopyToOutput>true</PackageCopyToOutput>
-    </Content>
-    <Content Include="neon-model\neon-model.runtimeconfig.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <PackageCopyToOutput>true</PackageCopyToOutput>
-    </Content>
-    <Content Include="neon-model\Neon.Common.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <PackageCopyToOutput>true</PackageCopyToOutput>
-    </Content>
-    <Content Include="neon-model\Neon.Common.pdb">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <PackageCopyToOutput>true</PackageCopyToOutput>
-    </Content>
-    <Content Include="neon-model\Neon.Common.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <PackageCopyToOutput>true</PackageCopyToOutput>
-    </Content>
-    <Content Include="neon-model\Neon.ModelGen.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <PackageCopyToOutput>true</PackageCopyToOutput>
-    </Content>
-    <Content Include="neon-model\Neon.ModelGen.pdb">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <PackageCopyToOutput>true</PackageCopyToOutput>
-    </Content>
-    <Content Include="neon-model\Neon.ModelGen.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <PackageCopyToOutput>true</PackageCopyToOutput>
-    </Content>
-    <Content Include="neon-model\Newtonsoft.Json.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <PackageCopyToOutput>true</PackageCopyToOutput>
-    </Content>
-    <Content Include="neon-model\Prometheus.NetCore.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <PackageCopyToOutput>true</PackageCopyToOutput>
-    </Content>
-    <Content Include="neon-model\Prometheus.NetStandard.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <PackageCopyToOutput>true</PackageCopyToOutput>
-    </Content>
-    <Content Include="neon-model\System.Collections.Immutable.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <PackageCopyToOutput>true</PackageCopyToOutput>
-    </Content>
-    <Content Include="neon-model\System.Composition.AttributedModel.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <PackageCopyToOutput>true</PackageCopyToOutput>
-    </Content>
-    <Content Include="neon-model\System.Composition.Convention.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <PackageCopyToOutput>true</PackageCopyToOutput>
-    </Content>
-    <Content Include="neon-model\System.Composition.Hosting.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <PackageCopyToOutput>true</PackageCopyToOutput>
-    </Content>
-    <Content Include="neon-model\System.Composition.Runtime.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <PackageCopyToOutput>true</PackageCopyToOutput>
-    </Content>
-    <Content Include="neon-model\System.Composition.TypedParts.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <PackageCopyToOutput>true</PackageCopyToOutput>
-    </Content>
-    <Content Include="neon-model\System.Reflection.Metadata.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <PackageCopyToOutput>true</PackageCopyToOutput>
-    </Content>
-    <Content Include="neon-model\System.Runtime.CompilerServices.Unsafe.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <PackageCopyToOutput>true</PackageCopyToOutput>
-    </Content>
-    <Content Include="neon-model\YamlDotNet.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <PackageCopyToOutput>true</PackageCopyToOutput>
-    </Content>
-  </ItemGroup>
-
-  <ItemGroup>
     <None Include="..\..\LICENSE">
       <Pack>True</Pack>
       <PackagePath></PackagePath>
@@ -230,6 +47,11 @@ NOTE: You must have a .NET Core 3.1 SDK or runtime installed for this to work be
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Neon.Common\Neon.Common.csproj" />
+    <ProjectReference Include="..\Neon.ModelGen\Neon.ModelGen.csproj" />
   </ItemGroup>
 
   <Target Name="ModelGen" BeforeTargets="BeforeBuild">
